--- a/ex06_2/src/main/webapp/WEB-INF/web.xml
+++ b/ex06_2/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 	
 	<filter>
 		<filter-name>encodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncoding</filter-class>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
