--- a/ICT2022-picTO/src/main/resources/application.properties
+++ b/ICT2022-picTO/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 server.servlet.context-path=/picTO
 
-spring.database.url=jdbc:h2:tcp://localhost/~/test
-spring.database.driver-class-name=org.h2.Driver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ict?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=spring5
+spring.datasource.password=spring5
