--- a/ICT2022-picTO/src/main/resources/application.properties
+++ b/ICT2022-picTO/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ict?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=spring5
 spring.datasource.password=spring5
+
+logging.config=classpath:log4j2.yml
