--- a/ICT2022-picTO/build.gradle
+++ b/ICT2022-picTO/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-//	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.4'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.4'
 	implementation 'com.h2database:h2'
 	implementation 'mysql:mysql-connector-java'
 
@@ -37,7 +37,7 @@ dependencies {
 	testImplementation ('org.springframework.boot:spring-boot-starter-test'){
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-//	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	compileOnly 'org.springframework.boot:spring-boot-starter-log4j2'
 	compileOnly group : 'com.fasterxml.jackson.dataformat', name : 'jackson-dataformat-yaml', version : '2.10.3'
 }
