--- a/ICT2022-picTO/src/main/resources/application.properties
+++ b/ICT2022-picTO/src/main/resources/application.properties
@@ -6,4 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ict?useSSL=false&useUnicode=tr
 spring.datasource.username=spring5
 spring.datasource.password=spring5
 
+spring.profiles.include=jwt
+spring.message.basename=i18n/exception
+spring.messages.encoding=UTF-8
+
 logging.config=classpath:log4j2.yml
