--- a/ICT2022-picTO/src/main/resources/application.properties
+++ b/ICT2022-picTO/src/main/resources/application.properties
@@ -7,7 +7,12 @@ spring.datasource.username=spring5
 spring.datasource.password=spring5
 
 spring.profiles.include=jwt
-spring.message.basename=i18n/exception
+spring.messages.basename=i18n/exception
 spring.messages.encoding=UTF-8
+spring.messages.fallback-to-system-locale=false
+
+spring.security.user.name=reidlo
+spring.security.user.password=12
+spring.security.user.roles=ROLE_ADMIN
 
 logging.config=classpath:log4j2.yml
