--- a/ICT2022-picTO/build.gradle
+++ b/ICT2022-picTO/build.gradle
@@ -26,14 +26,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.4'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.h2database:h2'
 	implementation 'mysql:mysql-connector-java'
 	implementation 'net.rakugakibox.util:yaml-resource-bundle:1.1'
 
 	compileOnly 'org.projectlombok:lombok'
-	compileOnly group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-	compileOnly group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
