--- a/ICT2022-picTO/src/main/resources/application.properties
+++ b/ICT2022-picTO/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.username=spring5
 spring.datasource.password=spring5
 
 spring.profiles.include=jwt
+
 spring.messages.basename=i18n/exception
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=false
@@ -14,5 +15,8 @@ spring.messages.fallback-to-system-locale=false
 spring.security.user.name=reidlo
 spring.security.user.password=12
 spring.security.user.roles=ROLE_ADMIN
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 
 logging.config=classpath:log4j2.yml
